config: make CUSTOM_MODELS optional

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -16,7 +16,7 @@ SAMPLES_DIR = config['SAMPLES_DIR']
 UNSTRANDED_KITS = config.get('UNSTRANDED_KITS', [])
 BIN_VERSION = config['BIN_VERSION']
 DEFAULT_MODEL = config['DEFAULT_MODEL']
-CUSTOM_MODELS = config['CUSTOM_MODELS']
+CUSTOM_MODELS = config.get('CUSTOM_MODELS', {})
 SAMPLE_DATA = config['SAMPLE_DATA']
 
 
