--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -11,6 +11,7 @@ else:
 #### set variables from config ####
 DOWNLOADS_DIR = config['DOWNLOADS_DIR']
 EXP_DIR = config['EXP_DIR']
+EXP_DIR_TRIGGER_FILE = config.get('EXP_DIR_TRIGGER_FILE', 'origin.txt')
 BASECALL_DIR = config['BASECALL_DIR']
 SAMPLES_DIR = config['SAMPLES_DIR']
 UNSTRANDED_KITS = config.get('UNSTRANDED_KITS', [])
