--- a/config/config.yml
+++ b/config/config.yml
@@ -14,13 +14,6 @@ EXP_DIR_TRIGGER_FILE: "origin.txt"
 BASECALL_DIR: "basecall" # Output dir with basecalled files per experiment
 SAMPLES_DIR: "samples" # Output dir with basecalled files per individual sample
 
-# List of ONT kits that are unstranded (e.g., cDNA kits). For these kits,
-# pychopper is used to strand the reads, and the basecaller runs with --no-trim
-# to keep adaptors needed by pychopper. The final FASTQ will be stranded and
-# adaptors trimmed. To disable this behavior, delete or set UNSTRANDED_KITS to
-# an empty list (UNSTRANDED_KITS: []).
-UNSTRANDED_KITS: ['SQK-PCB111-24', 'SQK-PCS111']
-
 # Dorado version to use. Will be automatically downloaded.
 BIN_VERSION: 'dorado-1.1.1-linux-x64'
 
@@ -33,16 +26,17 @@ CUSTOM_MODELS : {
   'exp1' : ['sup', 'm5C_2OmeC', 'inosine_m6A_2OmeA']
 }
 
-# Sample data. The barcode column is optional but sample_id, experiment_id and
-# kit are required. If multiple samples share the same experiment_id, they will
-# be demultiplexed by barcode. If no barcode is provided for a sample, it is
-# assumed that the experiment is not multiplexed.
+# Sample data. The stranded and barcode column are optional but sample_id,
+# experiment_id and kit are required. If multiple samples share the same
+# experiment_id, they will be demultiplexed by barcode. If no barcode is
+# provided for a sample, it is assumed that the experiment is not multiplexed.
+# If stranded is not provided, it will default to True.
 SAMPLE_DATA: {
-  'header': ['sample_id', 'experiment_id', 'kit', 'barcode'],
+  'header': ['sample_id', 'experiment_id', 'kit', 'stranded', 'barcode'],
   'data': [
-    ['sample1', 'exp1', 'SQK-RNA004'],
-    ['sample2', 'exp2', 'SQK-LSK114'],
-    ['sample3_1', 'exp3', 'SQK-PCB111-24', '01'],
-    ['sample3_2', 'exp3', 'SQK-PCB111-24', '02'],
+    ['sample1', 'exp1', 'SQK-RNA004', 'true'],
+    ['sample2', 'exp2', 'SQK-LSK114', 'false'],
+    ['sample3_1', 'exp3', 'SQK-PCB111-24', 'false', '01'],
+    ['sample3_2', 'exp3', 'SQK-PCB111-24', 'false', '02'],
   ],
 }
