--- a/config/config.yml
+++ b/config/config.yml
@@ -19,6 +19,12 @@ BIN_VERSION: 'dorado-1.1.1-linux-x64'
 
 # Default model to use for basecalling e.g. 'hac', 'sup', 'fast'
 DEFAULT_MODEL: 'hac'
+
+# Default resource allocation for basecall. This and all other resource
+# allocations for all rules can be overridden in a profile.
+DORADO_RESOURCES:
+    gpu: 2
+    gpu_model: "[gpua100|gpuv100x]"
     
 # Mapping to specify custom models for experiment
 # e.g. 'sup', 'm5C_2OmeC', 'inosine_m6A_2OmeA', 'pseU_2OmeU', '2OmeG'
